--- a/index.html
+++ b/index.html
@@ -81,23 +81,23 @@
     <section class="icons text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-2">
-            <img src="/Images/Icons/html-5 (2).png" width="75" alt="" srcset="">
+          <div class="col-md-2 split-mark">
+            <img src="/Images/Icons/html-5 (2).png" width="70" alt="" srcset="">
+          </div>
+          <div class="col-md-2 split-mark">
+            <img src="/Images/Icons/css-3 (2).png" width="70" alt="" srcset="">
+          </div>
+          <div class="col-md-2 split-mark">
+            <img src="/Images/Icons/bootstrap (1).png" width="70" alt="" srcset="">
+          </div>
+          <div class="col-md-2 split-mark">
+            <img src="/Images/Icons/photoshop.png" width="70" alt="" srcset="">
+          </div>
+          <div class="col-md-2 split-mark">
+            <img src="/Images/Icons/figma.png" width="70" alt="" srcset="">
           </div>
           <div class="col-md-2">
-            <img src="/Images/Icons/css-3 (2).png" width="75" alt="" srcset="">
-          </div>
-          <div class="col-md-2">
-            <img src="/Images/Icons/bootstrap (1).png" width="75" alt="" srcset="">
-          </div>
-          <div class="col-md-2">
-            <img src="/Images/Icons/photoshop.png" width="75" alt="" srcset="">
-          </div>
-          <div class="col-md-2">
-            <img src="/Images/Icons/figma.png" width="75" alt="" srcset="">
-          </div>
-          <div class="col-md-2">
-            <img src="/Images/Icons/wordpress (1).png" width="75" alt="" srcset="">
+            <img src="/Images/Icons/wordpress (1).png" width="70" alt="" srcset="">
           </div>
         </div>
       </div>
@@ -111,7 +111,37 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2>Projects Accomplished</h2>
+            <h2>Projects <span>Accomplished</span></h2>
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <img src="/Images/img2.jpg" alt="" srcset="">
+          </div>
+          <div class="col-md-6 project-1">
+            <h3>Beauty Salon</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, ipsam. Corporis dignissimos labore eligendi nam, molestiae aspernatur vitae id ratione.</p>
+            <button>View Site</button>
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col-md-6 project-2">
+            <h3>Travel</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, ipsam. Corporis dignissimos labore eligendi nam, molestiae aspernatur vitae id ratione.</p>
+            <button>View Site</button>
+          </div>
+          <div class="col-md-6">
+            <img src="/Images/img2.jpg" alt="" srcset="">
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <img src="/Images/img2.jpg" alt="" srcset="">
+          </div>
+          <div class="col-md-6 project-3">
+            <h3>Corporate</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, ipsam. Corporis dignissimos labore eligendi nam, molestiae aspernatur vitae id ratione.</p>
+            <button>View Site</button>
           </div>
         </div>
       </div>
