Updated content and made new sections

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="col-md-6">
             <h1>Welcome.</h1>
             <p>My name is Sourav Bose. I am a front-end developer based in Kolkata, West Bengal, India. I have developed many realtime websites for clients on behalf of my organisation starting from e-commerce to beauty salon.<br><br>I am passionate about developing attractive, eye catchy and modern websites.</p>
-            <button><i class="fa fa-download" aria-hidden="true"></i> Download Resume</button>
+            <a><i class="fa fa-download" aria-hidden="true"></i> Download Resume</a>
           </div>
           <!-- <div class="col-md-6">
             <img src="/Images/img1.png" class="w-100">
@@ -82,22 +82,40 @@
       <div class="container">
         <div class="row">
           <div class="col-md-2 split-mark">
-            <img src="/Images/Icons/html-5 (2).png" width="70" alt="" srcset="">
+            <figure>
+              <figcaption>HTML 5</figcaption>
+            <img src="/Images/Icons/html-5 (2).png" width="60" alt="" srcset="">
+            </figure>
           </div>
           <div class="col-md-2 split-mark">
-            <img src="/Images/Icons/css-3 (2).png" width="70" alt="" srcset="">
+            <figure>
+              <figcaption>CSS 3</figcaption>
+            <img src="/Images/Icons/css-3 (2).png" width="60" alt="" srcset="">
+            </figure>
           </div>
           <div class="col-md-2 split-mark">
-            <img src="/Images/Icons/bootstrap (1).png" width="70" alt="" srcset="">
+            <figure>
+              <figcaption>Bootstrap</figcaption>
+            <img src="/Images/Icons/bootstrap (1).png" width="60" alt="" srcset="">
+            </figure>
           </div>
           <div class="col-md-2 split-mark">
-            <img src="/Images/Icons/photoshop.png" width="70" alt="" srcset="">
+            <figure>
+              <figcaption>Photoshop</figcaption>
+            <img src="/Images/Icons/photoshop.png" width="60" alt="" srcset="">
+            </figure>
           </div>
           <div class="col-md-2 split-mark">
-            <img src="/Images/Icons/figma.png" width="70" alt="" srcset="">
+            <figure>
+              <figcaption>Figma</figcaption>
+            <img src="/Images/Icons/figma.png" width="60" alt="" srcset="">
+            </figure>
           </div>
           <div class="col-md-2">
-            <img src="/Images/Icons/wordpress (1).png" width="70" alt="" srcset="">
+            <figure>
+              <figcaption>Wordpress</figcaption>
+            <img src="/Images/Icons/wordpress (1).png" width="60" alt="" srcset="">
+            </figure>
           </div>
         </div>
       </div>
@@ -114,39 +132,85 @@
             <h2>Projects <span>Accomplished</span></h2>
           </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row align-items-center prjct-1">
           <div class="col-md-6">
-            <img src="/Images/img2.jpg" alt="" srcset="">
+            <div class="prjct-img">
+              <img src="/Images/Projects/p2.png" alt="" srcset="">
+            </div>
           </div>
           <div class="col-md-6 project-1">
-            <h3>Beauty Salon</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, ipsam. Corporis dignissimos labore eligendi nam, molestiae aspernatur vitae id ratione.</p>
-            <button>View Site</button>
+            <h3>Educational Institute</h3>
+            <p>An educational institute for kids. Required to create an one page website which will be informational but creative at the same time.</p>
+            <a target="_blank" href="https://geniuslanguage.com/">View Site</a>
           </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row align-items-center prjct-2">
           <div class="col-md-6 project-2">
-            <h3>Travel</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, ipsam. Corporis dignissimos labore eligendi nam, molestiae aspernatur vitae id ratione.</p>
-            <button>View Site</button>
+            <h3>Beauty Salon</h3>
+            <p>A beauty salon based in UK asked for an eye catchy multipage website for their clients, which is going to help their clients understand their services better.</p>
+            <a target="_blank" href="https://www.deanis.co.uk/">View Site</a>
           </div>
           <div class="col-md-6">
-            <img src="/Images/img2.jpg" alt="" srcset="">
+            <div class="prjct-img">
+              <img src="/Images/Projects/p1.png" alt="" srcset="">
+            </div>
           </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row align-items-center prjct-3">
           <div class="col-md-6">
-            <img src="/Images/img2.jpg" alt="" srcset="">
+            <div class="prjct-img">
+            <img src="/Images/Projects/p3.png" alt="" srcset="">
+          </div>
           </div>
           <div class="col-md-6 project-3">
             <h3>Corporate</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, ipsam. Corporis dignissimos labore eligendi nam, molestiae aspernatur vitae id ratione.</p>
-            <button>View Site</button>
+            <p>Designed this multipage modern looking website for a cargo shipping company based in Malaysia which is also a perfect example of a corporate website.</p>
+            <a target="_blank" href="https://megadexcargo.com.my/">View Site</a>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Projects Section End -->
+
+    <!-- Expertise Section -->
+
+    <section class="expertise">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="" alt="" srcset="">
+          </div>
+          <div class="col-md-6">
+            <div class="prog1">
+            <label for="file">HTML 5:</label><br>
+            <progress id="file" value="32" max="100"> 32% </progress>
+          </div>
+            <div class="prog1">
+            <label for="file">CSS 3:</label><br>
+            <progress id="file" value="32" max="100"> 32% </progress>
+          </div>
+            <div class="prog1">
+            <label for="file">Bootstrap:</label><br>
+            <progress id="file" value="32" max="100"> 32% </progress>
+          </div>
+            <div class="prog1">
+            <label for="file">Photoshop:</label><br>
+            <progress id="file" value="32" max="100"> 32% </progress>
+          </div>
+            <div class="prog1">
+            <label for="file">Figma:</label><br>
+            <progress id="file" value="32" max="100"> 32% </progress>
+          </div>
+            <div class="prog1">
+            <label for="file">Wordpress:</label><br>
+            <progress id="file" value="32" max="100"> 32% </progress>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Expertise Section End -->
 </body>
 </html>
