Some content added

--- a/index.html
+++ b/index.html
@@ -178,33 +178,45 @@
     <section class="expertise">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <img src="" alt="" srcset="">
+          <div class="col-md-12 text-center">
+            <h2><span>Expertise</span> & Skills</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 skills-list">
+            <ul>
+              <li><img src="/Images/List Icons/creative.png" width="50"> Creative Design</li>
+              <li><img src="/Images/List Icons/trending.png" width="50"> Trending Technologies</li>
+              <li><img src="/Images/List Icons/responsive.png" width="50"> Responsive Designs</li>
+              <li><img src="/Images/List Icons/save-time.png" width="50"> Time Management</li>
+              <li><img src="/Images/List Icons/group-chat.png" width="50"> Team Player</li>
+              <li><img src="/Images/List Icons/book.png" width="50"> Quick Learner</li>
+              </ul>
           </div>
           <div class="col-md-6">
             <div class="prog1">
             <label for="file">HTML 5:</label><br>
-            <progress id="file" value="32" max="100"> 32% </progress>
+            <progress id="file" value="80" max="100"> 80% </progress>
           </div>
             <div class="prog1">
             <label for="file">CSS 3:</label><br>
-            <progress id="file" value="32" max="100"> 32% </progress>
+            <progress id="file" value="80" max="100"> 80% </progress>
           </div>
             <div class="prog1">
             <label for="file">Bootstrap:</label><br>
-            <progress id="file" value="32" max="100"> 32% </progress>
+            <progress id="file" value="70" max="100"> 70% </progress>
           </div>
             <div class="prog1">
             <label for="file">Photoshop:</label><br>
-            <progress id="file" value="32" max="100"> 32% </progress>
+            <progress id="file" value="40" max="100"> 40% </progress>
           </div>
             <div class="prog1">
             <label for="file">Figma:</label><br>
-            <progress id="file" value="32" max="100"> 32% </progress>
+            <progress id="file" value="50" max="100"> 50% </progress>
           </div>
             <div class="prog1">
             <label for="file">Wordpress:</label><br>
-            <progress id="file" value="32" max="100"> 32% </progress>
+            <progress id="file" value="70" max="100"> 70% </progress>
           </div>
           </div>
         </div>
