Some sections created

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <a class="nav-link" href="#">About</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="#">Projects</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="#">Expertise</a>
                   </li>
                   <li class="nav-item">
@@ -129,7 +132,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2>Projects <span>Accomplished</span></h2>
+            <h2><span>Projects</span> Accomplished</h2>
           </div>
         </div>
         <div class="row align-items-center prjct-1">
@@ -182,19 +185,19 @@
             <h2><span>Expertise</span> & Skills</h2>
           </div>
         </div>
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-md-6 skills-list">
             <ul>
-              <li><img src="/Images/List Icons/creative.png" width="50"> Creative Design</li>
-              <li><img src="/Images/List Icons/trending.png" width="50"> Trending Technologies</li>
-              <li><img src="/Images/List Icons/responsive.png" width="50"> Responsive Designs</li>
-              <li><img src="/Images/List Icons/save-time.png" width="50"> Time Management</li>
-              <li><img src="/Images/List Icons/group-chat.png" width="50"> Team Player</li>
-              <li><img src="/Images/List Icons/book.png" width="50"> Quick Learner</li>
+              <li><img src="/Images/List Icons/creative.png" width="40"> Creative Design</li>
+              <li><img src="/Images/List Icons/trending.png" width="40"> Trending Technologies</li>
+              <li><img src="/Images/List Icons/responsive.png" width="40"> Responsive Designs</li>
+              <li><img src="/Images/List Icons/save-time.png" width="40"> Time Management</li>
+              <li><img src="/Images/List Icons/group-chat.png" width="40"> Team Player</li>
+              <li><img src="/Images/List Icons/book.png" width="40"> Quick Learner</li>
               </ul>
           </div>
           <div class="col-md-6">
-            <div class="prog1">
+            <div class="prog1 prog_first">
             <label for="file">HTML 5:</label><br>
             <progress id="file" value="80" max="100"> 80% </progress>
           </div>
@@ -224,5 +227,35 @@
     </section>
 
     <!-- Expertise Section End -->
+
+    <!-- Experience Section -->
+
+    <section class="experience">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 head">
+            <h2><span>Work</span> Experience</h2>
+            <p>Being an engineer, technology is always a part of mine and mixing it up with my passion I became a full time frontend developer.</p>
+            <a><i class="fa fa-download" aria-hidden="true"></i> Download Resume</a>
+          </div>
+          <div class="col-md-6">
+            <ul class="exp-1">
+              <li>
+                <img src="/Images/Icons/exp.png" width="60">
+                Archtech Design - June, 2022 to January, 2023<br>
+                <span>Frontend Developer</span>
+              </li>
+              <li>
+                <img src="/Images/Icons/exp.png" width="60">
+                iB Arts Pvt. Ltd. - January, 2023 to Present<br>
+                <span>Frontend Developer</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Experience Section End-->
 </body>
 </html>
