another section added

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <p>My name is Sourav Bose. I am a front-end developer based in Kolkata, West Bengal, India. I have developed many realtime websites for clients on behalf of my organisation starting from e-commerce to beauty salon.<br><br>I am passionate about developing attractive, eye catchy and modern websites.</p>
             <a><i class="fa fa-download" aria-hidden="true"></i> Download Resume</a>
           </div>
-          <!-- <div class="col-md-6">
-            <img src="/Images/img1.png" class="w-100">
-          </div> -->
+          <div class="col-md-6">
+            <img src="/Images/bnr1.png" width="100%">
+          </div>
         </div>
       </div>
     </section>
