--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
               <a class="nav-link" href="#work">Work Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Connect">Contact</a>
+              <a class="nav-link" href="#connect">Contact</a>
             </li>
           </ul>
           <div class="contact">
             <div class="cnt-txt d-flex align-items-center justify-content-between">
               <h6>Connect with me:</h6>
-              <a href="#"><img src="/Images/icn2.png" width="20" alt="" srcset=""></a>
-              <a href="#"><img src="/Images/icn1.png" width="20" alt="" srcset=""></a>
+              <a href="mailto:souravbose365@gmail.com"><img src="/Images/icn2.png" width="20" alt="" srcset=""></a>
+              <a target="_blank" href="https://www.linkedin.com/in/sourav-bose-85702417b/"><img src="/Images/icn1.png" width="20" alt="" srcset=""></a>
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
             <img src="/Images/Icons/figma.png" width="60" alt="" srcset="">
           </figure>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 split-mark1">
           <figure>
             <figcaption>Wordpress</figcaption>
             <img src="/Images/Icons/wordpress (1).png" width="60" alt="" srcset="">
@@ -210,15 +210,15 @@
         <div class="col-md-6">
           <div class="prog1 prog_first">
             <label for="file">HTML 5:</label><br>
-            <progress id="file" value="80" max="100"> 80% </progress>
+            <progress id="file" value="95" max="100"> 80% </progress>
           </div>
           <div class="prog1">
             <label for="file">CSS 3:</label><br>
-            <progress id="file" value="80" max="100"> 80% </progress>
+            <progress id="file" value="95" max="100"> 80% </progress>
           </div>
           <div class="prog1">
             <label for="file">Bootstrap:</label><br>
-            <progress id="file" value="70" max="100"> 70% </progress>
+            <progress id="file" value="80" max="100"> 70% </progress>
           </div>
           <div class="prog1">
             <label for="file">Photoshop:</label><br>
@@ -230,7 +230,7 @@
           </div>
           <div class="prog1">
             <label for="file">Wordpress:</label><br>
-            <progress id="file" value="70" max="100"> 70% </progress>
+            <progress id="file" value="80" max="100"> 70% </progress>
           </div>
         </div>
       </div>
@@ -280,7 +280,7 @@
             <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:6291719040">+91-6291719040</li>
             <li><i class="fa fa-envelope" aria-hidden="true"></i> <a
                 href="mailto:souravbose365@gmail.com">souravbose365@gmail.com</a></li>
-            <li><i class="fa fa-linkedin" aria-hidden="true"></i> <a
+            <li><i class="fa fa-linkedin" aria-hidden="true"></i> <a target="_blank"
                 href="https://www.linkedin.com/in/sourav-bose-85702417b/">Sourav Bose</a></li>
             <li><i class="fa fa-location-arrow" aria-hidden="true"></i> Kolkata, West Bengal, India</li>
           </ul>
